# CNN-prediction-ZKP-scheme

./: Model_Extract.py  README.md
libsnark_demo/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  (+1 more)
libsnark_demo/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  conv.cpp  fc.cpp  maxpool.cpp  relu.cpp  softmax.cpp
libsnark_demo/src/data/: conv1_bias_nume__test_1.csv  conv1_bias_nume__test_2.csv  conv1_bias_nume__test_3.csv  conv1_input_im2col_nume__test_1.csv  conv1_input_im2col_nume__test_2.csv  conv1_output_nume__test_1.csv  conv1_output_nume__test_2.csv  conv1_output_nume__test_3.csv  conv1_weight_nume__test_1.csv  conv1_weight_nume__test_2.csv  conv1_weight_nume__test_3.csv  exp_sum_nume__test_1.csv  exp_sum_nume__test_2.csv  exp_sum_nume__test_3.csv  fc1_bias_nume__test_1.csv  fc1_bias_nume__test_2.csv  fc1_bias_nume__test_3.csv  fc1_input_nume__test_1.csv  fc1_input_nume__test_2.csv  fc1_input_nume__test_3.csv  fc1_output_nume__test_1.csv  fc1_output_nume__test_2.csv  fc1_output_nume__test_3.csv  fc1_weight_nume__test_1.csv  fc1_weight_nume__test_2.csv  fc1_weight_nume__test_3.csv  maxpool1_input_im2col_nume__test_1.csv  maxpool1_input_im2col_nume__test_2.csv  maxpool1_input_im2col_nume__test_3.csv  maxpool1_operation__test_1.csv  maxpool1_operation__test_2.csv  maxpool1_operation__test_3.csv  maxpool1_output_nume__test_1.csv  maxpool1_output_nume__test_2.csv  maxpool1_output_nume__test_3.csv  relu1_input_nume__test_1.csv  relu1_input_nume__test_2.csv  relu1_input_nume__test_3.csv  relu1_operation__test_1.csv  relu1_operation__test_2.csv  (+10 more)
(+33 files in other folders)
